<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/set_private_mark"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/please_set_private_mark"
        android:textColor="@color/lightgrey"
        android:textSize="16sp"/>

    <FrameLayout
        android:id="@+id/frame_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/input_private_mark"
            android:inputType="textPassword"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:textColorHint="@color/greyline"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:button="@null"
            android:drawableEnd="@drawable/selector_checkbox_eye"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:hint="@string/confirm_again"
            android:inputType="textPassword"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:textColorHint="@color/greyline"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:button="@null"
            android:drawableEnd="@drawable/selector_checkbox_eye"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/forget_private_mark"
        android:textColor="@drawable/selector_textcolor_coloraccent"
        android:textSize="16sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/bt_finger_print"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:onClick="onClick"
        android:src="@mipmap/bt_finger_print"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tip_finger_print_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/greyline"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/click_login_by_finger_print"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/selector_background_lightblack"
            android:onClick="onClick"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>