<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/security_question"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/textView1"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:overlapAnchor="false"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/spinner1"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_answer"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:textSize="16sp"
        android:background="@drawable/selector_background_lightblack"
        android:text="@string/commit"
        android:textColor="@color/white"/>
</RelativeLayout>