<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <android.support.v7.widget.CardView
        android:id="@+id/button_priv_album"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="onClick"
        android:stateListAnimator="@animator/touch_raise"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_private_album"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_add_priv_photo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="onClick"
        android:stateListAnimator="@animator/touch_raise"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_private_photo"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_priv_video_album"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="onClick"
        android:stateListAnimator="@animator/touch_raise"
        android:visibility="gone"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_private_video"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_add_priv_video"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:onClick="onClick"
        android:stateListAnimator="@animator/touch_raise"
        android:visibility="gone"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_private_video"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>


</LinearLayout>
