<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/advanced_setup"
        android:textSize="20sp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/entrance_mode"
                android:textColor="@color/colorAccent"/>

            <RelativeLayout
                android:id="@+id/rv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:visibility="gone"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_finger_print_small"/>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv1"
                    android:text="@string/private_fingerprint"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv1"
                    android:layout_toEndOf="@id/iv1"
                    android:layout_toStartOf="@id/switch1"
                    android:text="@string/enter_private_space_by_private_fingerprint"
                    android:textColor="@color/greyline"
                    android:textSize="12sp"/>

            </RelativeLayout>

<!--            <RelativeLayout
                android:id="@+id/rv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                >

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/tow_swipe_down"/>

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv2"
                    android:text="@string/double_refers_to_decline"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv2"
                    android:layout_toEndOf="@id/iv2"
                    android:layout_toStartOf="@id/switch2"
                    android:text="@string/open_login_activity_by_double_decline"
                    android:textColor="@color/greyline"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                >

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv_save_by_cvf"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="6dp"
                    android:src="@mipmap/file_vcf"/>

                <TextView
                    android:id="@+id/tv_save_by_cvf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv_save_by_cvf"
                    android:text="@string/save_vcf"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_save_by_cvf"
                    android:layout_toEndOf="@id/iv_save_by_cvf"
                    android:layout_toStartOf="@id/switch3"
                    android:text="@string/enter_private_space_by_save_vcf_mark"
                    android:textColor="@color/greyline"
                    android:textSize="12sp"/>
            </RelativeLayout>-->


            <RelativeLayout
                android:id="@+id/rv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv_homekey_exit_app"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_exit"/>

                <TextView
                    android:id="@+id/tv_homekey_exit_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv_homekey_exit_app"
                    android:text="@string/fast_exit"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_homekey_exit_app"
                    android:layout_toEndOf="@id/iv_homekey_exit_app"
                    android:layout_toStartOf="@id/switch4"
                    android:text="@string/fast_exit_when_press_home_key"
                    android:textColor="@color/greyline"
                    android:textSize="12sp"/>
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/other_settings"
                android:textColor="@color/colorAccent"/>

            <RelativeLayout
                android:id="@+id/rv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_change_pwd"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv4"
                    android:text="@string/change_private_mark"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <ImageView
                    android:id="@+id/iv5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_pwd_question"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv5"
                    android:text="@string/security_question"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <ImageView
                    android:id="@+id/iv6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_use_help"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv6"
                    android:text="@string/using_help"
                    android:textSize="16sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <ImageView
                    android:id="@+id/iv7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@mipmap/set_wallet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv7"
                    android:text="@string/friendship_donation"
                    android:textSize="16sp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>